[package]
name = "rustdag-lib"
version = "0.1.0"
authors = ["Colin Moore <colin@moore.one>"]

[dependencies]
sha3 = "0.7.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bincode = "1.0"
restson = "0.3.0"
ring = "0.13.5"
lamport_sigs = "0.6.0"
rand = "0.5.3"
replace_with = "0.1.2"
base64 = "0.10.0"
wasmi = "0.4.2"

[lib]
name = "rustdag_lib"
